<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragemnt.ProfileFragment">
  <!--
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/backgrounddesgin"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abril_fatface"
                android:gravity="center"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </RelativeLayout>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/trainerpic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.429"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profilename"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="84dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/full_name"
            android:textColorHint="#8C8989"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="#8C8989"
            app:boxStrokeWidth="0.5dp"
            app:hintTextColor="#8C8989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="MissingConstraints">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profilenameET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:enabled="false"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.736"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView40" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profilenumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/mobilenumber"
            android:textColorHint="#8C8989"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="#8C8989"
            app:boxStrokeWidth="0.5dp"
            app:hintTextColor="#8C8989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilename"
            tools:ignore="MissingConstraints">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profilenumberET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/abril_fatface"
                android:inputType="number"
                android:maxLength="10"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.736"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView40" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/email_address"
            android:textColorHint="#8C8989"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="#8C8989"
            app:boxStrokeWidth="0.5dp"
            app:hintTextColor="#8C8989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilenumber">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileemailET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/abril_fatface"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:enabled="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.736"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView40" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profilelogoutBTN"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:focusable="false"
            android:background="@drawable/gradient_button"
            android:backgroundTintMode="@null"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/logout"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileemail" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient_button"
            android:textOff="@string/edit_profile"
            android:textOn="@string/save_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- </ScrollView>-->

</FrameLayout>