<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/logo1024x1024"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/driving_car" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mNameTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/enter_otp"
        android:textColorHint="#8C8989"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="#8C8989"
        app:boxStrokeWidth="0.5dp"
        app:hintTextColor="#8C8989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Otpverify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/abril_fatface"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView40" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/rsendoptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/resend_otp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mNameTIL" />

    <Button
        android:id="@+id/veryifyBTN"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/gradient_button"
        android:backgroundTintMode="@null"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/otp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mNameTIL"
        app:layout_constraintVertical_bias="0.784" />


</androidx.constraintlayout.widget.ConstraintLayout>