<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/logo1024x1024"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/full_name"
        android:textColorHint="#8C8989"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="#8C8989"
        app:boxStrokeWidth="0.5dp"
        app:hintTextColor="#8C8989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:fontFamily="@font/abril_fatface"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView40" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:hint="@string/email_address"
        android:textColorHint="#8C8989"
        android:fontFamily="@font/abril_fatface"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="#8C8989"
        app:boxStrokeWidth="0.5dp"
        app:hintTextColor="#8C8989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:singleLine="true"
            android:fontFamily="@font/abril_fatface"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView40" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:layout_marginRight="10dp"
        android:hint="@string/referral_code_optional"
        android:textColorHint="#8C8989"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="#8C8989"
        app:boxStrokeWidth="0.5dp"
        app:hintTextColor="#8C8989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/referalcodeET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:fontFamily="@font/abril_fatface"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView40" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupBTN"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient_button"
        android:backgroundTintMode="@null"
        android:text="@string/sign_up"
        android:fontFamily="@font/abril_fatface"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="1.0" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/abril_fatface"
        android:text="I agree to Terms and Conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="fill_vertical"
        android:orientation='horizontal'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"

            android:layout_gravity="fill_vertical"
            android:checked="false"
            android:fontFamily="@font/abril_fatface"
            android:text="Male"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:fontFamily="@font/abril_fatface"
            android:layout_gravity="fill_vertical"
            android:checked="false"
            android:text="Female"
            android:textSize="15dp" />
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:fontFamily="@font/abril_fatface"
            android:layout_gravity="fill_vertical"
            android:checked="false"
            android:text="Transgender"
            android:textSize="15dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>